--- a/test_Rmarkdown.Rmd
+++ b/test_Rmarkdown.Rmd
@@ -91,3 +91,14 @@ Note that the `echo = FALSE` parameter was added to the code chunk to prevent pr
 #Last section
 [@West2020;@Lei2018]
 
+```{r}
+library(remotes)
+```
+write_compendium_description(package = "test_Rmarkdown.Rmd", 
+                             description = "compendium description")
+
+write_dockerfile(maintainer = "zcakhea") 
+
+generate_badge() 
+
+
